; ModuleID = '/home/carl/AnghaBench/linux/drivers/cpuidle/extr_cpuidle-powernv.c_add_powernv_state.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/cpuidle/extr_cpuidle-powernv.c_add_powernv_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32, i32 (%struct.cpuidle_device.0*, %struct.cpuidle_driver.1*, i32)*, i32, i32 }
%struct.cpuidle_device.0 = type opaque
%struct.cpuidle_driver.1 = type opaque
%struct.TYPE_3__ = type { i8*, i8* }
%struct.cpuidle_device = type opaque
%struct.cpuidle_driver = type opaque

@powernv_states = common dso_local global %struct.TYPE_4__* null, align 8
@CPUIDLE_NAME_LEN = common dso_local global i32 0, align 4
@stop_psscr_table = common dso_local global %struct.TYPE_3__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*, i32, i32 (%struct.cpuidle_device*, %struct.cpuidle_driver*, i32)*, i32, i32, i8*, i8*)* @add_powernv_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_powernv_state(i32 %0, i8* %1, i32 %2, i32 (%struct.cpuidle_device*, %struct.cpuidle_driver*, i32)* %3, i32 %4, i32 %5, i8* %6, i8* %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32 (%struct.cpuidle_device*, %struct.cpuidle_driver*, i32)*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  %16 = alloca i8*, align 8
  store i32 %0, i32* %9, align 4
  store i8* %1, i8** %10, align 8
  store i32 %2, i32* %11, align 4
  store i32 (%struct.cpuidle_device*, %struct.cpuidle_driver*, i32)* %3, i32 (%struct.cpuidle_device*, %struct.cpuidle_driver*, i32)** %12, align 8
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i8* %6, i8** %15, align 8
  store i8* %7, i8** %16, align 8
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** @powernv_states, align 8
  %18 = load i32, i32* %9, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i64 %19
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 5
  %22 = load i32, i32* %21, align 4
  %23 = load i8*, i8** %10, align 8
  %24 = load i32, i32* @CPUIDLE_NAME_LEN, align 4
  %25 = call i32 @strlcpy(i32 %22, i8* %23, i32 %24)
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** @powernv_states, align 8
  %27 = load i32, i32* %9, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i64 %28
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 4
  %31 = load i32, i32* %30, align 8
  %32 = load i8*, i8** %10, align 8
  %33 = load i32, i32* @CPUIDLE_NAME_LEN, align 4
  %34 = call i32 @strlcpy(i32 %31, i8* %32, i32 %33)
  %35 = load i32, i32* %11, align 4
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** @powernv_states, align 8
  %37 = load i32, i32* %9, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %36, i64 %38
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 0
  store i32 %35, i32* %40, align 8
  %41 = load i32, i32* %13, align 4
  %42 = load %struct.TYPE_4__*, %struct.TYPE_4__** @powernv_states, align 8
  %43 = load i32, i32* %9, align 4
  %44 = sext i32 %43 to i64
  %45 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %42, i64 %44
  %46 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %45, i32 0, i32 1
  store i32 %41, i32* %46, align 4
  %47 = load i32, i32* %14, align 4
  %48 = load %struct.TYPE_4__*, %struct.TYPE_4__** @powernv_states, align 8
  %49 = load i32, i32* %9, align 4
  %50 = sext i32 %49 to i64
  %51 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %48, i64 %50
  %52 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %51, i32 0, i32 2
  store i32 %47, i32* %52, align 8
  %53 = load i32 (%struct.cpuidle_device*, %struct.cpuidle_driver*, i32)*, i32 (%struct.cpuidle_device*, %struct.cpuidle_driver*, i32)** %12, align 8
  %54 = bitcast i32 (%struct.cpuidle_device*, %struct.cpuidle_driver*, i32)* %53 to i32 (%struct.cpuidle_device.0*, %struct.cpuidle_driver.1*, i32)*
  %55 = load %struct.TYPE_4__*, %struct.TYPE_4__** @powernv_states, align 8
  %56 = load i32, i32* %9, align 4
  %57 = sext i32 %56 to i64
  %58 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %55, i64 %57
  %59 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %58, i32 0, i32 3
  store i32 (%struct.cpuidle_device.0*, %struct.cpuidle_driver.1*, i32)* %54, i32 (%struct.cpuidle_device.0*, %struct.cpuidle_driver.1*, i32)** %59, align 8
  %60 = load i8*, i8** %15, align 8
  %61 = load %struct.TYPE_3__*, %struct.TYPE_3__** @stop_psscr_table, align 8
  %62 = load i32, i32* %9, align 4
  %63 = sext i32 %62 to i64
  %64 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %61, i64 %63
  %65 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %64, i32 0, i32 1
  store i8* %60, i8** %65, align 8
  %66 = load i8*, i8** %16, align 8
  %67 = load %struct.TYPE_3__*, %struct.TYPE_3__** @stop_psscr_table, align 8
  %68 = load i32, i32* %9, align 4
  %69 = sext i32 %68 to i64
  %70 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %67, i64 %69
  %71 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %70, i32 0, i32 0
  store i8* %66, i8** %71, align 8
  ret void
}

declare dso_local i32 @strlcpy(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
